--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
                                 </div>
                                 <div>
                                     <p>
-                                        OctoMiao is a graduate student working on neutrino oscillations.
+                                        I am a graduate student working on neutrino oscillations.
                                     </p>
                                 </div>
 
@@ -176,7 +176,7 @@
                     </ul>
                 </nav>
                 <div class="copyright pull-right">
-                    &copy; <script>document.write(new Date().getFullYear())</script>, made with <i class="fa fa-heart heart"></i> by <a href="http://openmetric.org">OctoMiao</a>
+                    &copy; <script>document.write(new Date().getFullYear())</script>, made with <i class="fa fa-heart heart"></i> by <a href="http://openmetric.org">Lei Ma</a>
                 </div>
             </div>
         </footer>
