--- a/matter.html
+++ b/matter.html
@@ -255,7 +255,7 @@
                     </ul>
                 </nav>
                 <div class="copyright pull-right">
-                    &copy; <script>document.write(new Date().getFullYear())</script>, made with <i class="fa fa-heart heart"></i> by <a href="http://openmetric.org">OctoMiao</a>
+                    &copy; <script>document.write(new Date().getFullYear())</script>, made with <i class="fa fa-heart heart"></i> by <a href="http://openmetric.org">Lei Ma</a>
                 </div>
             </div>
         </footer>
